// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArticleMeta /> should format date without updatedAt 1`] = `
.c0 {
  font-size: 1.6rem;
  color: #AAAAAA;
  font-style: italic;
}

.c0 a {
  color: crimson;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c0 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

<div>
  <div
    class="c0"
  >
    <p>
      <span>
        Por 
      </span>
      <a
        href="/author/luisa-santiago"
      >
        Luísa Santiago
      </a>
      <span
        class="separator"
      >
         | 
      </span>
      <time
        datetime="2022-03-25T18:28:16.052Z"
      >
        25/03/2022 15:28
      </time>
      <span
        class="separator"
      >
         | 
      </span>
      <span
        class="categories"
      >
        <span>
          Categorias: 
        </span>
        <span>
          <a
            href="/category/django"
          >
            Django
          </a>
        </span>
      </span>
      <span
        class="separator"
      >
         | 
      </span>
      <span
        class="tags"
      >
        <span>
          Tags: 
        </span>
        <span>
          <a
            href="/tag/use-ref"
          >
            UseRef
          </a>
          <span>
            , 
          </span>
        </span>
        <span>
          <a
            href="/tag/postgres"
          >
            Postgres
          </a>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`<ArticleMeta /> should match snapshot 1`] = `
.c0 {
  font-size: 1.6rem;
  color: #AAAAAA;
  font-style: italic;
}

.c0 a {
  color: crimson;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c0 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

<div>
  <div
    class="c0"
  >
    <p>
      <span>
        Por 
      </span>
      <a
        href="/author/luisa-santiago"
      >
        Luísa Santiago
      </a>
      <span
        class="separator"
      >
         | 
      </span>
      <time
        datetime="2022-03-25T18:28:16.052Z"
      >
        25/03/2022 15:28
      </time>
      <span
        class="separator"
      >
         | 
      </span>
      <span>
        Editado em:
         
        <time
          datetime="2022-03-28T18:29:04.677Z"
        >
          28/03/2022 15:29
        </time>
      </span>
      <span
        class="separator"
      >
         | 
      </span>
      <span
        class="categories"
      >
        <span>
          Categorias: 
        </span>
        <span>
          <a
            href="/category/django"
          >
            Django
          </a>
        </span>
      </span>
      <span
        class="separator"
      >
         | 
      </span>
      <span
        class="tags"
      >
        <span>
          Tags: 
        </span>
        <span>
          <a
            href="/tag/use-ref"
          >
            UseRef
          </a>
          <span>
            , 
          </span>
        </span>
        <span>
          <a
            href="/tag/postgres"
          >
            Postgres
          </a>
        </span>
      </span>
    </p>
  </div>
</div>
`;
